# fallback-property

./: .gitignore  .travis.yml  CHANGELOG  README.rst  commitlint.config.js  package-lock.json  package.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pythonpublish.yml
fallback_property/: __init__.py
prefetched_property/: __init__.py
tests/: conftest.py  models.py  test_decorator.py  test_django.py
